[project]
name = "chatbot"
version = "0.1.0"
description = "chatbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "GitHub", module_name = "nonebot.adapters.github" }
]
plugins = ["nonebot_plugin_sparkapi", "nonebot_plugin_qqshell", "nonebot_plugin_localstore", "nonebot_plugin_session", "nonebot_plugin_docs", "nonebot_plugin_apscheduler", "nonebot_plugin_treehelp"]
plugin_dirs = []
builtin_plugins = ["echo"]
